// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gocardless PayTo Handler _transform() 1`] = `
Object {
  "paymentMethodType": "pay_to",
  "requiresRedirection": true,
}
`;

exports[`Gocardless PayTo Handler _transform() 2`] = `
Object {
  "paymentMethodDetails": Object {
    "billingAddress": Object {
      "addressLine1": "123",
      "city": "123",
      "countryCode": "AU",
      "zip": "123",
    },
    "companyName": "Chargebee",
    "directDebitBankAccount": Object {
      "accountCountry": "AU",
      "accountNumber": "123",
      "routingNumber": "123",
    },
    "email": "siva@chargebee.com",
    "firstName": undefined,
    "lastName": undefined,
    "payTo": Object {
      "accountNumber": "123",
      "bsbNumber": "123",
    },
  },
  "paymentMethodType": "pay_to",
}
`;

exports[`Gocardless PayTo Handler _transform() 3`] = `
Object {
  "paymentMethodDetails": Object {
    "billingAddress": Object {
      "addressLine1": "123",
      "city": "123",
      "countryCode": "AU",
      "zip": "123",
    },
    "companyName": undefined,
    "directDebitBankAccount": Object {
      "accountCountry": "AU",
      "accountNumber": "123",
      "routingNumber": "123",
    },
    "email": "siva@chargebee.com",
    "firstName": "Chargebee",
    "lastName": "Chargebee",
    "payTo": Object {
      "accountNumber": "123",
      "bsbNumber": "123",
    },
  },
  "paymentMethodType": "pay_to",
}
`;

exports[`Gocardless PayTo Handler _transform() 4`] = `
Object {
  "paymentMethodDetails": Object {
    "billingAddress": Object {
      "addressLine1": "123",
      "city": "Sydney",
      "countryCode": "AU",
      "zip": "2000",
    },
    "companyName": undefined,
    "email": "siva@chargebee.com",
    "firstName": "Chargebee",
    "lastName": "Customer",
    "payTo": Object {
      "payId": "user@example.com",
    },
  },
  "paymentMethodType": "pay_to",
}
`;
